--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ajax pagination plugin for Shopify themes inspired by Ajaxinate",
   "main": "infiniteScrollManager.js",
   "scripts": {
-    "test": "npx eslint src/**"
+    "test": "npx eslint src/**",
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,10 @@
   },
   "homepage": "https://github.com/adearriba/InfiniteScrollManager#readme",
   "devDependencies": {
+    "del": "^7.0.0",
     "eslint": "^8.27.0",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-rename": "^2.0.0",
+    "gulp-uglify": "^3.0.2"
   }
 }
