--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "infinitescrollmanager",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Ajax pagination plugin for Shopify themes inspired by Ajaxinate",
   "main": "infiniteScrollManager.js",
   "scripts": {
-    "test": "npx eslint src/**",
-    "build": "gulp"
+    "lint": "eslint src/** && echo eslint completed!",
+    "build": "npm run lint && gulp"
   },
   "repository": {
     "type": "git",
@@ -27,10 +27,15 @@
   },
   "homepage": "https://github.com/adearriba/InfiniteScrollManager#readme",
   "devDependencies": {
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/stream": "^2.0.0",
     "del": "^7.0.0",
     "eslint": "^8.27.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "jsdoc-to-markdown": "^7.1.1",
+    "rollup": "^3.3.0",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
